# FilmScriptGenerator-In-Seconds

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
